[project]
name = "reference-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "pymupdf>=1.23.0",
    "pandas>=2.0.0",
    "pydantic-ai>=0.0.14",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pandas-stubs==2.3.2.250827",
    "openai>=1.0.0",
]
